# diffusion-gen

./: README.md  pyproject.toml
.github/workflows/: build.yaml  test.yaml
lib/diffusion_gen/: __init__.py  __main__.py
