[build-system]
requires = ["poetry-core >= 1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "diffusion-gen"
version = "0.1.0"
description = "A minimalistic text-to-image generator that utilizes diffusion models."
license = "MIT"
authors = [
    "Alfi Maulana <alfi.maulana.f@gmail.com>",
]
readme = "README.md"
homepage = "https://threeal.github.io/diffusion-gen/"
repository = "https://github.com/threeal/diffusion-gen"
packages = [
    { include = "my_fibonacci", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
poethepoet = "^0.31.1"
pytest-cov = "^6.0.0"
ruff = "^0.8.4"

[tool.poetry.scripts]
my_fibonacci = "my_fibonacci.__main__:main"

[tool.poe.tasks]
format = "ruff format lib tests"
lint = "ruff check lib tests"
test = "pytest -v --cov=my_fibonacci"

[tool.coverage.report]
fail_under = 100
omit = ["__main__.py"]

[tool.ruff.lint]
extend-select = ["E", "W", "C90", "I", "N", "D", "UP", "ANN", "S", "B", "A", "C4", "ICN", "INP", "PIE", "PT", "Q", "RET", "SIM", "TCH", "ARG", "ERA", "PL", "PERF"]
ignore = ["D211", "D212"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]
